--- a/package.json
+++ b/package.json
@@ -45,8 +45,10 @@
     "morgan": "^1.10.0",
     "prom-client": "^15.1.2",
     "quill": "^2.0.2",
+    "quill-image-uploader": "^1.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-quill": "^2.0.0",
     "react-quilljs": "^2.0.4",
     "source-map-support": "^0.5.21",
     "tiny-invariant": "^1.3.3"
