--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,18 @@
 [build]
-command = "npm run build:remix"
-publish = "build"
+  command = "remix build"
+  functions = "netlify/functions"
+  publish = "public"
+
+[dev]
+  command = "remix watch"
+  port = 3000
 
 [[redirects]]
-from = "/*"
-to = "/"
-status = 200
+  from = "/*"
+  to = "/.netlify/functions/server"
+  status = 200
+
+[[headers]]
+  for = "/build/*"
+  [headers.values]
+    "Cache-Control" = "public, max-age=31536000, s-maxage=31536000"
