--- a/netlify.toml
+++ b/netlify.toml
@@ -1,18 +1,9 @@
 [build]
-  command = "remix build"
-  functions = "netlify/functions"
-  publish = "public/build"
-
-[dev]
-  command = "remix watch"
-  port = 3000
+command = "npm run build"
+publish = "public/build"
+functions= "netlify/functions"
 
 [[redirects]]
-  from = "/*"
-  to = "/.netlify/functions/server"
-  status = 200
-
-[[headers]]
-  for = "/build/*"
-  [headers.values]
-    "Cache-Control" = "public, max-age=31536000, s-maxage=31536000"
+from = "/*"
+to = "/"
+status = 200
