--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "exclude": ["./cypress", "./cypress.config.ts"],
-  "include": ["remix.env.d.ts", "**/*.ts", "**/*.tsx", "app/Components/Editor.tsx"],
+  "include": ["remix.env.d.ts", "**/*.ts", "**/*.tsx", "app/Components/Editor.tsx", "netlify/functions/server.js"],
   "compilerOptions": {
     "lib": ["DOM", "DOM.Iterable", "ES2020"],
     "types": ["vitest/globals"],
