--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   ],
   "dependencies": {
     "@isaacs/express-prometheus-middleware": "^1.2.1",
+    "@netlify/functions": "^2.8.2",
     "@prisma/client": "^4.16.2",
     "@remix-run/css-bundle": "^2.11.2",
     "@remix-run/express": "^2.11.2",
