--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-command = "npm run build"
+command = "npx prisma generate && npm run build"
 publish = "public"                  # Ensure this points to your static files
 functions = "netlify/functions"
 
