--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "quill-image-uploader": "^1.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-quill": "^2.0.0",
     "react-quilljs": "^2.0.4",
     "source-map-support": "^0.5.21",
