--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-icons": "^5.3.0",
     "react-quill": "^2.0.0",
     "react-quilljs": "^2.0.4",
+    "remixicon": "^4.6.0",
     "source-map-support": "^0.5.21",
     "tiny-invariant": "^1.3.3"
   },
